src-tauri/check_output.txt
    Checking vasak-desktop v0.1.0 (/home/pato/Proyectos/VasakOS/vasak-desktop/src-tauri)
error[E0599]: no method named `read_events` found for struct `ReadEventsGuard` in the current scope
   --> src/window_manager/wayland.rs:325:47
    |
325 |                         if let Err(e) = guard.read_events() {
    |                                               ^^^^^^^^^^^ method not found in `ReadEventsGuard`

error[E0282]: type annotations needed
   --> src/window_manager/wayland.rs:326:33
    |
326 | ...                   if e.kind() != std::io::ErrorKind::WouldBlock {
    |                          ^ cannot infer type

warning: unreachable pattern
   --> src/battery.rs:135:29
    |
134 | ...                   _none => true,
    |                       ----- matches any value
135 | ...                   Some(last) => {
    |                       ^^^^^^^^^^ no value can reach this
    |
    = note: `#[warn(unreachable_patterns)]` (part of `#[warn(unused)]`) on by default

warning: unreachable pattern
   --> src/battery.rs:171:25
    |
170 |                         _none => true,
    |                         ----- matches any value
171 |                         Some(last) => {
    |                         ^^^^^^^^^^ no value can reach this

warning: unused variable: `e`
   --> src/battery.rs:115:17
    |
115 |             Err(e) => {
    |                 ^ help: if this is intentional, prefix it with an underscore: `_e`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `screen_width`
  --> src/windows_apps/panel.rs:87:13
   |
87 |         let screen_width = workarea.width() as u32;
   |             ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_screen_width`

Some errors have detailed explanations: E0282, E0599.
For more information about an error, try `rustc --explain E0282`.
warning: `vasak-desktop` (lib) generated 4 warnings
error: could not compile `vasak-desktop` (lib) due to 2 previous errors; 4 warnings emitted
